crates/airpulse_dsl-syntax/src/parser.rs
//! ADGL parser (`docs/idea/spec/02-grammar.ebnf`) implemented with winnow-powered lexing.

use std::borrow::Cow;

use airpulse_dsl_types::{ActionKind, ScopeType, Severity};
use ndsl_diag::{DiagBuffer, Diagnostic, Span};
use ndsl_trivia::{Trivia, TriviaKind, classify_line_comment, docs_from_leading};
use winnow::Parser;
use winnow::error::InputError;
use winnow::token::take_while;

use crate::ast::{
    ActionField, ActionName, ActionStmt, AnchorBlock, BinaryOp, CauseAnchor, CorrelateBlock,
    CorrelateSource, DecisionAnchor, DecisionRule, Decl, DurationLit, EmitField, EmitStmt,
    EvidenceRule, Expr, ExprKind, Ident, IfElseBlock, InferField, InferStmt, IntLit, KindIdent,
    MutuallyExclusiveDecl, ProblemAnchor, RequiresDecl, RuleDecl, Ruleset, RulesetHeader, Stmt,
    StringLit, TimeWindow, TopoPredicate, UnaryOp,
};

// ============================================================================
// Token model and parse error envelope
// ============================================================================

#[derive(Debug, Clone, PartialEq)]
enum TokenKind<'a> {
    Ident(&'a str),
    String(String),
    Int(i64),
    Duration(i64),
    LBrace,
    RBrace,
    LParen,
    RParen,
    LBracket,
    RBracket,
    Colon,
    Comma,
    Dot,
    Eq,
    Plus,
    Minus,
    Star,
    Slash,
    Percent,
    Bang,
    Lt,
    Le,
    Gt,
    Ge,
    EqEq,
    Ne,
    AndAnd,
    OrOr,
    Kw(&'static str),
    Eof,
}

#[derive(Debug, Clone, PartialEq)]
struct Token<'a> {
    kind: TokenKind<'a>,
    span: Span,
    leading: Vec<Trivia>,
}

#[derive(Debug, Clone)]
struct ParseErr {
    code: &'static str,
    message: Cow<'static, str>,
    expected: Cow<'static, str>,
    /// What was actually seen at the error span, when known.
    found: Option<Cow<'static, str>>,
    /// Short recovery hint (e.g. `did you mean \`evidence\`?`).
    help: Option<Cow<'static, str>>,
    span: Span,
}

impl ParseErr {
    fn new(
        code: &'static str,
        message: impl Into<Cow<'static, str>>,
        expected: impl Into<Cow<'static, str>>,
        span: Span,
    ) -> Self {
        Self {
            code,
            message: message.into(),
            expected: expected.into(),
            found: None,
            help: None,
            span,
        }
    }

    fn found(mut self, found: impl Into<Cow<'static, str>>) -> Self {
        self.found = Some(found.into());
        self
    }

    fn help(mut self, help: impl Into<Cow<'static, str>>) -> Self {
        self.help = Some(help.into());
        self
    }
}

const KEYWORDS: &[&str] = &[
    "ruleset",
    "version",
    "requires",
    "mutually_exclusive",
    "evidence",
    "decision",
    "scope",
    "anchor",
    "correlate",
    "having",
    "infer",
    "emit",
    "action",
    "if",
    "else",
    "present",
    "absent",
    "and",
    "or",
    "not",
    "Cause",
    "Problem",
    "event",
    "in",
    "true",
    "false",
];

// ============================================================================
// Public parse entry points
// ============================================================================

/// Parse an ADGL ruleset from source.
///
/// On rule/decl-level syntax errors the parser records a diagnostic, resyncs to
/// the next ruleset member (`}` or keywords `evidence` / `decision` /
/// `mutually_exclusive` / `version` / `requires`), and continues so later errors
/// accumulate in the same [`DiagBuffer`]. A successful AST is returned only when
/// no diagnostics were recorded; otherwise `Err(buf)` carries every diagnostic.
pub fn parse_ruleset<'a>(src: &'a str) -> Result<Ruleset<'a>, DiagBuffer> {
    match tokenize(src) {
        Ok(tokens) => {
            let mut p = ParserState::new(tokens);
            p.recover = true;
            match p.parse_ruleset() {
                Ok(ast) if p.diags.is_empty() => Ok(ast),
                Ok(_) => Err(std::mem::take(&mut p.diags)),
                Err(err) => {
                    p.record_error(err);
                    Err(std::mem::take(&mut p.diags))
                }
            }
        }
        Err(err) => Err(diag_from_err(err)),
    }
}

/// Fail-fast variant: stops at the first syntax error (no rule/decl recovery).
#[cfg(test)]
fn parse_ruleset_fail_fast<'a>(src: &'a str) -> Result<Ruleset<'a>, DiagBuffer> {
    match tokenize(src) {
        Ok(tokens) => match ParserState::new(tokens).parse_ruleset() {
            Ok(ast) => Ok(ast),
            Err(err) => Err(diag_from_err(err)),
        },
        Err(err) => Err(diag_from_err(err)),
    }
}

/// Parse an expression for precedence-focused tests.
pub fn parse_expression<'a>(src: &'a str) -> Result<Expr<'a>, DiagBuffer> {
    match tokenize(src) {
        Ok(tokens) => {
            let mut p = ParserState::new(tokens);
            match p.parse_expr() {
                Ok(expr) => {
                    if !matches!(p.peek_kind(), TokenKind::Eof) {
                        Err(diag_from_err(ParseErr::new(
                            "ADGL0100",
                            "unexpected trailing tokens",
                            "end of input",
                            p.peek().span,
                        )))
                    } else {
                        Ok(expr)
                    }
                }
                Err(err) => Err(diag_from_err(err)),
            }
        }
        Err(err) => Err(diag_from_err(err)),
    }
}

fn diag_from_err(err: ParseErr) -> DiagBuffer {
    let mut buf = DiagBuffer::new();
    buf.push(diag_of(err));
    buf
}

fn diag_of(err: ParseErr) -> Diagnostic {
    let mut msg = match &err.found {
        Some(found) => format!(
            "{} (expected: {}, found: {})",
            err.message, err.expected, found
        ),
        None => format!("{} (expected: {})", err.message, err.expected),
    };
    if let Some(help) = &err.help {
        msg.push_str("; ");
        msg.push_str(help);
    }
    Diagnostic::error(err.code, msg, err.span)
}

fn describe_token_kind(kind: &TokenKind<'_>) -> Cow<'static, str> {
    match kind {
        TokenKind::Ident(s) => Cow::Owned((*s).to_string()),
        TokenKind::String(_) => Cow::Borrowed("string literal"),
        TokenKind::Int(v) => Cow::Owned(v.to_string()),
        TokenKind::Duration(ms) => Cow::Owned(format!("{ms}ms")),
        TokenKind::LBrace => Cow::Borrowed("{"),
        TokenKind::RBrace => Cow::Borrowed("}"),
        TokenKind::LParen => Cow::Borrowed("("),
        TokenKind::RParen => Cow::Borrowed(")"),
        TokenKind::LBracket => Cow::Borrowed("["),
        TokenKind::RBracket => Cow::Borrowed("]"),
        TokenKind::Colon => Cow::Borrowed(":"),
        TokenKind::Comma => Cow::Borrowed(","),
        TokenKind::Dot => Cow::Borrowed("."),
        TokenKind::Eq => Cow::Borrowed("="),
        TokenKind::Plus => Cow::Borrowed("+"),
        TokenKind::Minus => Cow::Borrowed("-"),
        TokenKind::Star => Cow::Borrowed("*"),
        TokenKind::Slash => Cow::Borrowed("/"),
        TokenKind::Percent => Cow::Borrowed("%"),
        TokenKind::Bang => Cow::Borrowed("!"),
        TokenKind::Lt => Cow::Borrowed("<"),
        TokenKind::Le => Cow::Borrowed("<="),
        TokenKind::Gt => Cow::Borrowed(">"),
        TokenKind::Ge => Cow::Borrowed(">="),
        TokenKind::EqEq => Cow::Borrowed("=="),
        TokenKind::Ne => Cow::Borrowed("!="),
        TokenKind::AndAnd => Cow::Borrowed("&&"),
        TokenKind::OrOr => Cow::Borrowed("||"),
        TokenKind::Kw(k) => Cow::Borrowed(*k),
        TokenKind::Eof => Cow::Borrowed("end of input"),
    }
}

fn levenshtein(a: &str, b: &str) -> usize {
    if a == b {
        return 0;
    }
    if a.is_empty() {
        return b.chars().count();
    }
    if b.is_empty() {
        return a.chars().count();
    }
    let a: Vec<char> = a.chars().collect();
    let b: Vec<char> = b.chars().collect();
    let mut prev: Vec<usize> = (0..=b.len()).collect();
    let mut cur = vec![0; b.len() + 1];
    for (i, &ca) in a.iter().enumerate() {
        cur[0] = i + 1;
        for (j, &cb) in b.iter().enumerate() {
            let cost = usize::from(ca != cb);
            cur[j + 1] = (prev[j + 1] + 1).min(cur[j] + 1).min(prev[j] + cost);
        }
        std::mem::swap(&mut prev, &mut cur);
    }
    prev[b.len()]
}

/// Suggest a keyword/candidate when `found` is a near miss (edit distance ≤ 2).
fn suggest_near_miss(found: &str, candidates: &[&'static str]) -> Option<&'static str> {
    let found = found.trim();
    if found.is_empty() || found == "end of input" {
        return None;
    }
    let mut best: Option<(&'static str, usize)> = None;
    for &cand in candidates {
        let d = levenshtein(found, cand);
        if d == 0 || d > 2 {
            continue;
        }
        // Prefer shorter edits; tie-break on shorter candidate name.
        let better = match best {
            None => true,
            Some((prev, prev_d)) => d < prev_d || (d == prev_d && cand.len() < prev.len()),
        };
        if better {
            best = Some((cand, d));
        }
    }
    best.map(|(c, _)| c)
}

fn help_did_you_mean(candidate: &str) -> String {
    format!("did you mean `{candidate}`?")
}

// ============================================================================
// Lexer / tokenizer
// ============================================================================

fn tokenize<'a>(src: &'a str) -> Result<Vec<Token<'a>>, ParseErr> {
    if src.len() > 4 * 1024 * 1024 {
        return Err(ParseErr::new(
            "ADGL0102",
            "source exceeds 4 MiB limit",
            "input <= 4 MiB",
            Span::new(0, src.len()),
        ));
    }

        let mut lx = Lexer::new(src);
    let mut out = Vec::new();
    let mut depth: usize = 0;
    while !lx.is_eof() {
        lx.skip_ws_and_comments()?;
        if lx.is_eof() {
            break;
        }
        let leading = lx.trivia_before_next_token();
        let mut tok = lx.next_token()?;
        tok.leading = leading;
        match tok.kind {
            TokenKind::LBrace | TokenKind::LParen | TokenKind::LBracket => {
                depth += 1;
                if depth > 64 {
                    return Err(ParseErr::new(
                        "ADGL0103",
                        "nesting depth exceeds 64",
                        "nesting depth <= 64",
                        tok.span,
                    ));
                }
            }
            TokenKind::RBrace | TokenKind::RParen | TokenKind::RBracket => {
                depth = depth.saturating_sub(1);
            }
            _ => {}
        }
        out.push(tok);
    }
    out.push(Token {
        kind: TokenKind::Eof,
        span: Span::new(src.len(), src.len()),
        leading: Vec::new(),
    });
    Ok(out)
}

struct Lexer<'a> {
    src: &'a str,
    pos: usize,
    /// Trivia collected while skipping ahead to the most recent token.
    pending_trivia: Vec<Trivia>,
}

impl<'a> Lexer<'a> {
    fn new(src: &'a str) -> Self {
        Self {
            src,
            pos: 0,
            pending_trivia: Vec::new(),
        }
    }

    /// Take trivia collected immediately before the most recent token cycle
    /// (`skip_ws_and_comments` + `next_token`).
    ///
    /// Formatters and AST attach will drain this; unit tests cover the API today.
    #[allow(dead_code)]
    fn trivia_before_next_token(&mut self) -> Vec<Trivia> {
        std::mem::take(&mut self.pending_trivia)
    }

    fn is_eof(&self) -> bool {
        self.pos >= self.src.len()
    }

    fn rest(&self) -> &'a str {
        &self.src[self.pos..]
    }

    fn bump_char(&mut self) -> Option<char> {
        let rest = self.rest();
        let ch = rest.chars().next()?;
        self.pos += ch.len_utf8();
        Some(ch)
    }

    fn peek_char(&self) -> Option<char> {
        self.rest().chars().next()
    }

    fn skip_ws_and_comments(&mut self) -> Result<(), ParseErr> {
        self.pending_trivia.clear();
        loop {
            let mut consumed = false;
            while matches!(self.peek_char(), Some(' ' | '\t' | '\r' | '\n')) {
                let _ = self.bump_char();
                consumed = true;
            }
            if self.rest().starts_with("//") {
                consumed = true;
                let start = self.pos;
                while let Some(ch) = self.peek_char() {
                    if ch == '\n' {
                        break;
                    }
                    let _ = self.bump_char();
                }
                let end = self.pos;
                let text = self.src[start..end].to_owned();
                self.pending_trivia.push(Trivia {
                    kind: classify_line_comment(&text),
                    span: Span::new(start, end),
                    text,
                });
            } else if self.rest().starts_with("/*") {
                consumed = true;
                let start = self.pos;
                let _ = self.bump_char();
                let _ = self.bump_char();
                while !self.is_eof() && !self.rest().starts_with("*/") {
                    let _ = self.bump_char();
                }
                if self.is_eof() {
                    return Err(ParseErr::new(
                        "ADGL0106",
                        "unclosed block comment",
                        "closing */",
                        Span::new(start, start + 2),
                    ));
                }
                let _ = self.bump_char();
                let _ = self.bump_char();
                let end = self.pos;
                self.pending_trivia.push(Trivia {
                    kind: TriviaKind::BlockComment,
                    span: Span::new(start, end),
                    text: self.src[start..end].to_owned(),
                });
            }
            if !consumed {
                break;
            }
        }
        Ok(())
    }

    fn next_token(&mut self) -> Result<Token<'a>, ParseErr> {
        let start = self.pos;
        let rest = self.rest();

        if rest.starts_with("&&") {
            self.pos += 2;
            return Ok(Token {
                kind: TokenKind::AndAnd,
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if rest.starts_with("||") {
            self.pos += 2;
            return Ok(Token {
                kind: TokenKind::OrOr,
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if rest.starts_with("==") {
            self.pos += 2;
            return Ok(Token {
                kind: TokenKind::EqEq,
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if rest.starts_with("!=") {
            self.pos += 2;
            return Ok(Token {
                kind: TokenKind::Ne,
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if rest.starts_with("<=") {
            self.pos += 2;
            return Ok(Token {
                kind: TokenKind::Le,
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if rest.starts_with(">=") {
            self.pos += 2;
            return Ok(Token {
                kind: TokenKind::Ge,
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }

        match self.peek_char() {
            Some('{') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::LBrace,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('}') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::RBrace,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('(') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::LParen,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some(')') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::RParen,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('[') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::LBracket,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some(']') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::RBracket,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some(':') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Colon,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some(',') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Comma,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('.') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Dot,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('=') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Eq,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('+') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Plus,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('-') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Minus,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('*') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Star,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('/') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Slash,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('%') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Percent,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('!') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Bang,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('<') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Lt,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('>') => {
                let _ = self.bump_char();
                Ok(Token {
                    kind: TokenKind::Gt,
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                })
            }
            Some('"') => self.lex_string(start),
            Some(ch) if ch.is_ascii_digit() => self.lex_number_or_duration(start),
            Some(ch) if is_ident_start(ch) => self.lex_ident_or_kw(start),
            Some(_) => {
                let _ = self.bump_char();
                Err(ParseErr::new(
                    "ADGL0100",
                    "unexpected character",
                    "token",
                    Span::new(start, self.pos),
                ))
            }
            None => Ok(Token {
                kind: TokenKind::Eof,
                span: Span::new(self.pos, self.pos),
                leading: Vec::new(),
            }),
        }
    }

    fn lex_ident_or_kw(&mut self, start: usize) -> Result<Token<'a>, ParseErr> {
        let mut input = self.rest();
        let parsed = take_run(&mut input, is_ident_continue).map_err(|_| {
            ParseErr::new(
                "ADGL0100",
                "malformed identifier",
                "identifier",
                Span::new(start, start + 1),
            )
        })?;
        if parsed.len() > 255 {
            return Err(ParseErr::new(
                "ADGL0101",
                "identifier exceeds 255 bytes",
                "identifier length <= 255",
                Span::new(start, start + parsed.len()),
            ));
        }
        if parsed.starts_with("__")
            && !matches!(
                parsed,
                "__watermark" | "__scope" | "__confidence" | "__ruleset_version"
            )
        {
            return Err(ParseErr::new(
                "ADGL0104",
                "identifier prefix '__' is reserved",
                "builtin identifier",
                Span::new(start, start + parsed.len()),
            ));
        }
        self.pos += parsed.len();
        let kind = if KEYWORDS.contains(&parsed) {
            TokenKind::Kw(keyword_static(parsed))
        } else {
            TokenKind::Ident(parsed)
        };
        Ok(Token {
            kind,
            span: Span::new(start, self.pos),
                leading: Vec::new(),
        })
    }

    fn lex_number_or_duration(&mut self, start: usize) -> Result<Token<'a>, ParseErr> {
        let rest = self.rest();
        let mut end = 0usize;
        let mut radix = 10u32;
        if rest.starts_with("0x") || rest.starts_with("0X") {
            radix = 16;
            end = 2;
            while let Some(ch) = rest[end..].chars().next() {
                if ch.is_ascii_hexdigit() || ch == '_' {
                    end += ch.len_utf8();
                } else {
                    break;
                }
            }
        } else if rest.starts_with("0b") || rest.starts_with("0B") {
            radix = 2;
            end = 2;
            while let Some(ch) = rest[end..].chars().next() {
                if matches!(ch, '0' | '1' | '_') {
                    end += ch.len_utf8();
                } else {
                    break;
                }
            }
        } else {
            while let Some(ch) = rest[end..].chars().next() {
                if ch.is_ascii_digit() || ch == '_' {
                    end += ch.len_utf8();
                } else {
                    break;
                }
            }
        }
        if end == 0 {
            return Err(ParseErr::new(
                "ADGL0100",
                "malformed number",
                "integer literal",
                Span::new(start, start + 1),
            ));
        }
        let digits = rest[..end].replace('_', "");
        let parsed = if radix == 10 {
            digits.parse::<i64>()
        } else {
            i64::from_str_radix(
                digits
                    .trim_start_matches("0x")
                    .trim_start_matches("0X")
                    .trim_start_matches("0b")
                    .trim_start_matches("0B"),
                radix,
            )
        };
        let value = parsed.map_err(|_| {
            ParseErr::new(
                "ADGL0100",
                "integer literal out of range",
                "i64 integer literal",
                Span::new(start, start + end),
            )
        })?;

        let unit_rest = &rest[end..];
        if unit_rest.starts_with("ms") {
            self.pos += end + 2;
            return Ok(Token {
                kind: TokenKind::Duration(value),
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if unit_rest.starts_with('s') && !starts_ident_continue(unit_rest, 1) {
            self.pos += end + 1;
            return Ok(Token {
                kind: TokenKind::Duration(value.saturating_mul(1_000)),
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if unit_rest.starts_with("min") {
            self.pos += end + 3;
            return Ok(Token {
                kind: TokenKind::Duration(value.saturating_mul(60_000)),
                span: Span::new(start, self.pos),
                leading: Vec::new(),
            });
        }
        if unit_rest.starts_with('m') || unit_rest.starts_with("mi") {
            return Err(ParseErr::new(
                "ADGL0110",
                "malformed duration unit",
                "duration unit: ms, s, min",
                Span::new(
                    start,
                    start + end + unit_rest.chars().take(3).map(char::len_utf8).sum::<usize>(),
                ),
            ));
        }

        self.pos += end;
        Ok(Token {
            kind: TokenKind::Int(value),
            span: Span::new(start, self.pos),
                leading: Vec::new(),
        })
    }

    fn lex_string(&mut self, start: usize) -> Result<Token<'a>, ParseErr> {
        let _ = self.bump_char(); // opening "
        let mut out = String::new();
        while let Some(ch) = self.bump_char() {
            if ch == '"' {
                return Ok(Token {
                    kind: TokenKind::String(out),
                    span: Span::new(start, self.pos),
                leading: Vec::new(),
                });
            }
            if ch == '\\' {
                let esc = match self.bump_char() {
                    Some('n') => '\n',
                    Some('t') => '\t',
                    Some('r') => '\r',
                    Some('0') => '\0',
                    Some('"') => '"',
                    Some('\\') => '\\',
                    Some('x') => {
                        let hi = self.bump_char().ok_or_else(|| {
                            ParseErr::new(
                                "ADGL0100",
                                "incomplete hex escape",
                                "two hex digits",
                                Span::new(start, self.pos),
                            )
                        })?;
                        let lo = self.bump_char().ok_or_else(|| {
                            ParseErr::new(
                                "ADGL0100",
                                "incomplete hex escape",
                                "two hex digits",
                                Span::new(start, self.pos),
                            )
                        })?;
                        let hex = [hi, lo].iter().collect::<String>();
                        let b = u8::from_str_radix(&hex, 16).map_err(|_| {
                            ParseErr::new(
                                "ADGL0100",
                                "invalid hex escape",
                                "\\xHH",
                                Span::new(start, self.pos),
                            )
                        })?;
                        b as char
                    }
                    Some(other) => {
                        return Err(ParseErr::new(
                            "ADGL0100",
                            format!("unknown escape '\\{}'", other),
                            "valid string escape",
                            Span::new(start, self.pos),
                        ));
                    }
                    None => {
                        return Err(ParseErr::new(
                            "ADGL0100",
                            "unterminated string",
                            "closing quote",
                            Span::new(start, self.pos),
                        ));
                    }
                };
                out.push(esc);
            } else {
                out.push(ch);
            }
        }
        Err(ParseErr::new(
            "ADGL0100",
            "unterminated string",
            "closing quote",
            Span::new(start, self.pos),
        ))
    }
}

fn starts_ident_continue(s: &str, byte_idx: usize) -> bool {
    s.get(byte_idx..)
        .and_then(|rest| rest.chars().next())
        .is_some_and(is_ident_continue)
}

fn is_ident_start(ch: char) -> bool {
    ch.is_ascii_alphabetic() || ch == '_'
}

fn is_ident_continue(ch: char) -> bool {
    ch.is_ascii_alphanumeric() || ch == '_'
}

/// Maximal run via winnow `take_while` — keeps lexer helpers readable.
fn take_run<'a>(input: &mut &'a str, pred: impl Fn(char) -> bool) -> Result<&'a str, ()> {
    take_while::<_, _, InputError<&str>>(1.., pred)
        .parse_next(input)
        .map_err(|_| ())
}

fn keyword_static(s: &str) -> &'static str {
    match s {
        "ruleset" => "ruleset",
        "version" => "version",
        "requires" => "requires",
        "mutually_exclusive" => "mutually_exclusive",
        "evidence" => "evidence",
        "decision" => "decision",
        "scope" => "scope",
        "anchor" => "anchor",
        "correlate" => "correlate",
        "having" => "having",
        "infer" => "infer",
        "emit" => "emit",
        "action" => "action",
        "if" => "if",
        "else" => "else",
        "present" => "present",
        "absent" => "absent",
        "and" => "and",
        "or" => "or",
        "not" => "not",
        "Cause" => "Cause",
        "Problem" => "Problem",
        "event" => "event",
        "in" => "in",
        "true" => "true",
        "false" => "false",
        _ => "unknown",
    }
}
